--- a/SalesWebMVC/Views/Home/About.cshtml
+++ b/SalesWebMVC/Views/Home/About.cshtml
@@ -1,7 +1,10 @@
 ﻿@{
-    ViewData["Title"] = "About";
+    ViewData["Title"] = "Sobre";
 }
 <h2>@ViewData["Title"]</h2>
 <h3>@ViewData["Message"]</h3>
 
-<p>Use this area to provide additional information.</p>
+<p>Informações do Desenvolvedor do Sistema.</p>
+<p>@ViewData["Nome"]</p>
+<p>@ViewData["Email"]</p>
+
